--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:scss": "npx stylelint '**/*.scss'"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -19,7 +20,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss": "^8.4.5",
     "sass-loader": "^8.0.2",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
